araqne-webconsole/src/main/resources/WEB-INF/css/app.css
topbar { 
	background-color: #eee;
	height: auto;
	display: none;
}

.icon-null {
	background-position: 3000px 3000px;
}

.ngViewport:focus {
	outline: none;
}

.gridStyle {
	border: 1px solid #aaa;
}

.gridStyle-fixed {
	height: 186px;
}

.leftPane {
	position: fixed;
	top: 30px;
	bottom: 0;
	width: 22%;
	overflow: auto;
}

.rightPane {
	float: left;
	margin-left: 21.5%;
	width: 78.5%;
}

.clearboth {
	clear: both;
}

.ldbQueryBox {
	width: 80%;
}

.well {
	margin-right: 20px;
	margin-bottom: 0;
	padding: 10px;
	border-radius: 0;
}

.modal {
	position: absolute;
	width: 900px;
	margin-left: -450px;
	padding: 10px;
}

.modal::after {
	position: absolute;
	display: table;
	content: ' ';
	height: 60px;
}

.wizard-contents, .wizard-contents-parser, .wizard-contents-index {
	float: left;
	width: 140px;
}

.wizard-contents li.active, .wizard-contents-parse li.active, .wizard-contents-index li.active {
	font-weight: bold;
}

.wizard, .wizard-parser, .wizard-index {
	float: left;
	width: 680px;
	margin-left: 10px;
	padding-left: 25px;
	border-left: 1px solid #ccc;
}

.wizard legend, .wizard-parser legend, .wizard-index legend {
	font-size: 16px;
}

.wizard > li.active legend, .wizard-parser > li.active legend, .wizard-index > li.active legend {
	font-size: 21px;
}

.wizard > li, .wizard-parser > li, .wizard-index > li{
	display: none;
}

.wizard > li.active, .wizard-parser > li.active, .wizard-index > li.active {
	display: block;
}

eu-tree .hide {
	display: none;
}

.nav-list i.tree-node-icon {
	margin-right: 5px;
}

.raw {
	width: 800px;
	max-height: 400px;
	overflow: scroll;
	font-family: 'Consolas';
	font-size: 10pt;
}

.cell-right, .table td.cell-right {
	text-align: right; 
}

.cell-editable {
	display: inline-block;
	width: 90px !important;
	height: 20px !important;
	padding: 4px 6px;
	margin-bottom: 10px;
	font-size: 14px;
	line-height: 20px;
	color: #555555;
	vertical-align: middle;
	text-align: right;

	background-color: #ffffff;
	border: 1px solid #cccccc;
	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
	-webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
	-moz-transition: border linear 0.2s, box-shadow linear 0.2s;
	-o-transition: border linear 0.2s, box-shadow linear 0.2s;
	transition: border linear 0.2s, box-shadow linear 0.2s;
}

.cell-editable:hover {
	border-color: rgba(82, 168, 236, 0.8);
	outline: 0;
	outline: thin dotted 9;
	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
}

input[type=number] {
	text-align: right !important;
}

.fieldset-description {
	margin-bottom: 10px;
}

.submit-group {
	text-align: right;
	margin-bottom: 0px !important;
	border-top: 1px solid #ccc;
	padding-top: 10px;
}

.selected .green {
	background-color: transparent;
}
.green {
	background-color: #D1FFD1;
}

.ngCell {
	overflow: hidden;
	position: absolute;
	border-right: 0px;
	border-left: 1px solid rgb(212,212,212);
	top: 0;
	bottom: 0;
	background-color: inherit;
}

.general-detail {
	margin-left: 0px;
}

.general-detail li {
	margin-top: 20px;
}

.hide > .icon-minus {
	/*background-position: -456px -72px;*/
	background-position: -408px -96px;
	/* background-position: -313px -119px; */
}

.icon-refresh.pull-right {
	margin-top: 15px;
	cursor: pointer;
}

.pane {
	list-style: none;
	margin-left: 0;
	padding: 10px 40px;
}

.paneSentry, .paneLocalLogger {
	padding: 0;
}

/*
.table-bordered {
	border: 1px solid #aaa;
	border-collapse: separate;
	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
	border-radius: 0px;
}

.table th, .table td {
	padding: 8px;
	line-height: 17px;
	text-align: left;
	vertical-align: top;
	border-top: 0;
}
*/

.table-striped tbody > tr:nth-child(odd) > td, .table-striped tbody > tr:nth-child(odd) > th {
	background-color: rgb(243,243,243);
}

thead tr {
	background-color: rgb(234,234,234);
}

thead th {
	border-bottom: 1px solid #ccc;
	white-space: nowrap;
}



.modal-backdrop {
	overflow-y: auto;
}

.modal-wrapper {
	position: relative;
	top: 50px;
	left: 50%;
	z-index: 1050;
	width: 100%;
	margin-left: -50%;
	margin-bottom: 50px;
	overflow: visible;
}

.modal-backdrop.in, .modal-backdrop.fade.in, .modal-backdrop {
	opacity: 1.0;
	filter: alpha(opacity=100);
	background: rgba(0, 0, 0, 0.6);
}


.btnEditSentry, .btnRemoveSentry {
	margin-top: -1px;
	margin-left: 3px;
	margin-right: -1px;
}

.mdlRemoveSentry, .mdlRemoveLogger, .mdlAnnounceLocalLogger {
	position: absolute;
	width: 550px;
	margin-left: -275px;
	padding: 10px 20px;
}

.tbl-container {
	width: 100%;
	border: 1px solid #aaa;
	overflow-x: auto;
	min-height: 220px;
}

.tbl-container > table {
	display: table;
	border: 0;
	margin: 0;
}

tr[tr-selectable], tr[tr-multi-selectable] {
	cursor: pointer;
}

tr[tr-selectable]:nth-child(odd).tr-selected > td, tr[tr-multi-selectable]:nth-child(odd).tr-selected > td {
	background-color: rgba(0, 153, 255, .3) !important;
}

tr[tr-selectable]:nth-child(even).tr-selected > td, tr[tr-multi-selectable]:nth-child(even).tr-selected > td {
	background-color: rgba(0, 153, 255, .2) !important;
}

.well.leftPane {
	box-shadow: 0 0 40px rgba(0,0,0,.4);
}


ul.well1 {
	margin-left: 0;
	list-style: none;
	padding-bottom: 20px;
}

li.well1 {
	/*
	border: 1px solid #ccc;
	border-radius: 10px;
	*/
	border-bottom: 1px solid #ccc;

	padding: 10px 40px;
	/*box-sizing: border-box; */

	margin-bottom: 5px;

	background-color: white;
}

li.well1.wellnbr, li.well1:last-child {
	margin-bottom: 20px;
	border-bottom: 0;
}




ul.area {
	margin-left: 0;
	list-style: none;
	padding-bottom: 20px;
}

li.area {
	margin: 10px 40px;
	border-bottom: 1px solid #ccc;
	/*padding: 10px;*/
	box-sizing: border-box;
	margin-bottom: 10px;
	background-color: white;
}

li.area:last-child {
	margin-bottom: 0px;
}


.alert-cont {
	float: right;
	right: 50%;
	position: relative;
}

.alert.alert-fix {
	float: right;
	right: -50%;
	position: relative;
	z-index: 9999;
	
	box-shadow: 0 0 40px #000;
}

.alert.alert-fix-side {
	position: fixed;
	right: 38px;
	top: 60px;
	/*bottom: -40px;*/
	opacity: 0;
	-webkit-transition: bottom .5s ease, opacity .5s ease;
}

.alert.alert-fix-side.show {
	
	top: 60px;
	opacity: 1;
}


.qr-th-type {
	/*display: none;*/
	/* display: inline-block; */
	background-color: #999;
	border-radius: 4px;
	color: white;
	font-size: 0.8em;
	padding: 1px;
	padding-top: 0px;
	width: 16px;
	height: 16px;
	text-align: center;
}

.qr-th-type i {
	margin: 0;
}

.cmpqr.table {
	margin-bottom: -5px;
}

.cmpqr.expandable {
	display: inline-table;
	margin-right: 160px;
}


query-input.loading textarea {
	width: calc(100% - 190px);
}

query-input textarea, query-input.loaded textarea {
	width: calc(100% - 105px);
}

query-input.loading .stop {
	display: block;
}

query-input .stop, query-input.loaded .stop {
	display: none;
}

query-input .btn {
	float: right;
	width: 80px;
	margin-left: 5px;
}

query-input textarea {
	/*-webkit-transition: background-color .6s ease;
	-moz-transition: background-color .6s ease;
	-o-transition: background-color .6s ease;
	transition: background-color .6s ease;*/
}

@-webkit-keyframes query-input-loaded {
	from {
		background-color: lightgreen;
	}
	to {
		background-color: white;
	}
}

query-input.loaded textarea {
	-webkit-animation: query-input-loaded 1s ease;
}

query-input.loading textarea {
	-webkit-animation: progress-bar-stripes 2s linear infinite;
	-moz-animation: progress-bar-stripes 2s linear infinite;
	-ms-animation: progress-bar-stripes 2s linear infinite;
	-o-animation: progress-bar-stripes 2s linear infinite;
	animation: progress-bar-stripes 2s linear infinite;

	/*background-color: #149bdf;*/
	background-color: lightblue;
	background-image: -webkit-gradient(linear,0 100%,100% 0,color-stop(0.25,rgba(255,255,255,0.15)),color-stop(0.25,transparent),color-stop(0.5,transparent),color-stop(0.5,rgba(255,255,255,0.15)),color-stop(0.75,rgba(255,255,255,0.15)),color-stop(0.75,transparent),to(transparent));
	background-image: -webkit-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
	background-image: -moz-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
	background-image: -o-linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
	background-image: linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
	-webkit-background-size: 40px 40px;
	-moz-background-size: 40px 40px;
	-o-background-size: 40px 40px;
	background-size: 40px 40px;

	/*color: #fff;*/
	/*text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
	-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
	-moz-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);*/	
	
}

/* <input-file> directive */
.file_input_textbox
{
	float: left
}

.file_input_div
{
	position: relative; 
	width: 100px; 
	height: 30px; 
	overflow: hidden;
}

.file_input_button
{
	width: 100px; 
	position: absolute; 
	top: 0px;
}

.file_input_hidden
{
	font-size: 45px; 
	position: absolute; 
	right: 0px; 
	top: 0px; 
	opacity: 0; 
	
	filter: alpha(opacity=0); 
	-ms-filter: "alpha(opacity=0)"; 
	-khtml-opacity: 0; 
	-moz-opacity: 0;

	cursor: pointer;
}

.file_input_button.btn.hover {
	color: #333;
	text-decoration: none;
	background-position: 0 -15px;
	-webkit-transition: background-position .1s linear;
	-moz-transition: background-position .1s linear;
	-o-transition: background-position .1s linear;
	transition: background-position .1s linear;

	background-color: #e6e6e6;
}



/** tree **/

tree .hide {
	display: none;
}

.tree-root {
	margin-right: 15px;
}

.nav-list {
	padding-right: 0;
}

.nav-list a {
	/*border: 1px solid transparent;*/
}

.nav-list > li.check:not(.active) > a:first-child {
	background-color: rgba(0, 153, 255, .1);
}

.nav-list > li.check:not(.active) > a:first-child:hover {
	background-color: rgba(0, 153, 255, .2);
}

.nav-list i.tree-node-icon {
	margin-right: 5px;
}

.ui-state-hover {
	background-color: #ffff66 !important;
	color: #08c !important;
}

.ui-state-active {
	/*background-color: yellow !important;*/
}

.ui-draggable-dragging {
	z-index: 9999;
}

button[el-type=refresh] {
	background: transparent;
	border: 0;
	width: 22px;
	margin-right: -11px;
	outline: none;
}

